src/test/deca/context/invalid/fields/method_redeclaration_conflict_with_field.deca
// Description :
//    Déclaration d'une méthode ayant le même nom qu'un champ.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 12 : Méthode f déjà définie

class A {
    int f() {
        return 1;
    }
    int f;
}

{
}

